--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mycompany</groupId>
-    <artifactId>kareteDeneme</artifactId>
+    <artifactId>kareteAPI</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
